--- a/WPF Traning/Grid Perfomace/Grid Perfomace.csproj
+++ b/WPF Traning/Grid Perfomace/Grid Perfomace.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Services\Entidade\Coluna.cs" />
+    <Compile Include="Services\Service\ColunaService.cs" />
+    <Compile Include="Services\Util\RandomExtensions.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -63,9 +66,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Componentes\Entidade\Coluna.cs" />
-    <Compile Include="Componentes\Service\ColunaService.cs" />
-    <Compile Include="Componentes\Util\RandomExtensions.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -97,5 +97,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
